# EmbarcaTech_Multicore

./: CMakeLists.txt  Multicore.c  README.md
lib/: matriz_leds.c  ssd1306.c  ssd1306.h
